--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -46,7 +46,14 @@ signs:
       - "--detach-sign"
       - "${artifact}"
 release:
-  # If you want to manually examine the release before its live, uncomment this line:
+  github:
+    owner: "fetch-rewards"
+    name: "terraform-provider-confluent-schema-registry"
   draft: true
 changelog:
   skip: true
+#release:
+#  # If you want to manually examine the release before its live, uncomment this line:
+#  draft: true
+#changelog:
+#  skip: true
