schema returned from read is always the latest version from the schema registry

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,11 @@ vendor/
 
 dist/
 .vscode/
+.idea/
+.DS_Store
+.terraform/
+*/.terraform/
+.terraform.lock.hcl
+terraform.tfstate
+terraform.tfstate.backup
+*.tfvars
