--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -49,6 +49,6 @@ release:
   github:
     owner: "fetch-rewards"
     name: "terraform-provider-confluent-schema-registry"
- # draft: true TODO after testing set this back to true
+  draft: true # after testing set this back to true
 changelog:
   skip: true
